# archlint

./: .archlint.yaml.example  .gitignore  .npmrc  .prettierignore  .releaserc-canary.json  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  commitlint.config.cjs  commitlint.config.js  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  sonar-project.properties  vitest.config.ts
.cargo/: config.toml
crates/archlint/: Cargo.toml
crates/archlint-napi/: Cargo.toml  build.rs
crates/archlint-napi/src/: lib.rs  types.rs
crates/archlint/src/: args.rs  cli.rs  clippy_test.rs  config.rs  debug_tokens.rs  error.rs  explain.rs  glob_expand.rs  graph.rs  lib.rs  main.rs  metrics.rs  no_cli_mocks.rs  package_json.rs  project_root.rs  resolver.rs  rule_resolver.rs  scanner.rs  tsconfig.rs
crates/archlint/src/api/: analyzer.rs  file_info.rs  mod.rs  options.rs  result.rs
crates/archlint/src/cache/: hash.rs  mod.rs
crates/archlint/src/commands/: diff.rs  diff_output.rs  git_snapshot.rs  mod.rs  snapshot.rs
crates/archlint/src/config/: mod.rs  tests.rs  types.rs
crates/archlint/src/detectors/: abstractness.rs  barrel_abuse.rs  circular_type_deps.rs  code_clone.rs  complexity.rs  cycles.rs  dead_code.rs  dead_symbols.rs  deep_nesting.rs  feature_envy.rs  god_module.rs  high_coupling.rs  hub_dependency.rs  hub_module.rs  large_file.rs  layer_violation.rs  lcom.rs  long_params.rs  macros.rs  mod.rs  orphan_types.rs  package_cycle.rs  primitive_obsession.rs  registry.rs  scattered_config.rs  scattered_module.rs  sdp_violation.rs  shared_mutable_state.rs  shotgun_surgery.rs  side_effect_import.rs  smell.rs  test_leakage.rs  types.rs  unstable_interface.rs  vendor_coupling.rs
crates/archlint/src/detectors/code_clone/: engine.rs  mod.rs  tokenizer.rs  types.rs
crates/archlint/src/detectors/dependency/: circular_type_deps.rs  cycles.rs  high_coupling.rs  hub_dependency.rs  hub_module.rs  layer_violation.rs  mod.rs  package_cycle.rs  vendor_coupling.rs
crates/archlint/src/detectors/design/: abstractness.rs  barrel_abuse.rs  feature_envy.rs  god_module.rs  mod.rs  orphan_types.rs  primitive_obsession.rs  scattered_config.rs  scattered_module.rs  sdp_violation.rs  shared_mutable_state.rs  shotgun_surgery.rs  unstable_interface.rs
crates/archlint/src/detectors/hygiene/: dead_code.rs  dead_symbols.rs  mod.rs  side_effect_import.rs  test_leakage.rs
crates/archlint/src/detectors/metrics/: cognitive_complexity.rs  complexity.rs  cyclomatic_complexity.rs  deep_nesting.rs  large_file.rs  lcom.rs  long_params.rs  mod.rs
crates/archlint/src/diff/: engine.rs  explain.rs  fuzzy.rs  metrics.rs  mod.rs  types.rs
crates/archlint/src/engine/: builder.rs  context.rs  detector_runner.rs  mod.rs  progress.rs  runner.rs
crates/archlint/src/framework/: classifier.rs  detector.rs  mod.rs  preset_loader.rs  preset_types.rs  presets.rs  selector.rs
crates/archlint/src/git_cache/: mod.rs  storage.rs
crates/archlint/src/incremental/: affected.rs  graph_update.rs  mod.rs  state.rs
crates/archlint/src/parser/: complexity.rs  import_parser.rs  line_index.rs  mod.rs  tokenizer.rs  types.rs  visitor.rs
crates/archlint/src/parser/visitor/: exports.rs  imports.rs  locals.rs  metrics.rs  mod.rs  tests.rs
crates/archlint/src/report/: json.rs  markdown.rs  mermaid.rs  mod.rs  sarif.rs
crates/archlint/src/report/markdown/: common.rs  complexity.rs  cycles.rs  dead_code.rs  dead_symbols.rs  envy.rs  god_modules.rs  hub_deps.rs  large_files.rs  macros.rs  mod.rs  summary.rs  surgery.rs  unstable.rs
crates/archlint/src/snapshot/: generator.rs  id.rs  io.rs  mod.rs  types.rs
crates/archlint/src/tsconfig/: mod.rs  resolver.rs  tests.rs  types.rs
crates/archlint/src/utils/: package.rs
crates/archlint/src/watch/: diff.rs  mod.rs  runner.rs  ui.rs
crates/archlint/test_data/: README.md
crates/archlint/test_data/abstractness/abstract_classes/: abstract.service.ts  client1.ts  client10.ts  client2.ts  client3.ts  client4.ts  client5.ts  client6.ts  client7.ts  client8.ts  client9.ts
crates/archlint/test_data/abstractness/ok/: app.ts  balanced.ts
crates/archlint/test_data/abstractness/pain/: app1.ts  app10.ts  app2.ts  app3.ts  app4.ts  app5.ts  app6.ts  app7.ts  app8.ts  app9.ts  database.service.ts  rigid.ts
crates/archlint/test_data/abstractness/smart_pain/: client1.ts  client10.ts  client2.ts  client3.ts  client4.ts  client5.ts  client6.ts  client7.ts  client8.ts  client9.ts  service.ts
crates/archlint/test_data/abstractness/smart_passive/: client1.ts  client10.ts  client2.ts  client3.ts  client4.ts  client5.ts  client6.ts  client7.ts  client8.ts  client9.ts  dto.ts
crates/archlint/test_data/abstractness/useless/: unused.ts  useless.service.ts
crates/archlint/test_data/barrel/many_exports/: index.ts
crates/archlint/test_data/barrel/small/: index.ts
crates/archlint/test_data/clones/exact/: file2.ts
crates/archlint/test_data/clones/exported/: file.ts
crates/archlint/test_data/dead_code/: dead.ts  main.ts  used.ts
crates/archlint/test_data/dead_code_nested/: main.ts
crates/archlint/test_data/god_module/: caller1.ts  caller2.ts  dep1.ts  dep2.ts  god.ts
crates/archlint/tests/: abstractness_test.rs  barrel_abuse_test.rs  circular_type_deps_test.rs  cli_diff.rs  code_clone_test.rs  cycle_detector_test.rs  dead_code_detector_test.rs  dead_code_exclude_test.rs  dead_code_side_effect_test.rs  deep_nesting_test.rs  diff_integration.rs  framework_test.rs  god_module_detector_test.rs  graph_test.rs  high_coupling_test.rs  hub_module_test.rs  ignore_comments_test.rs  layer_violation_test.rs  lcom_test.rs  long_params_test.rs  orphan_types_test.rs  package_cycle_test.rs  parser_test.rs  primitive_obsession_test.rs  public_api.rs  resolver_test.rs  scattered_config_test.rs  scattered_module_test.rs  scope_test.rs  sdp_violation_test.rs  shared_state_test.rs  side_effect_test.rs  snapshot_integration_test.rs  test_leakage_test.rs  vendor_coupling_test.rs
crates/archlint/tests/common/: mod.rs
docs/: index.md
(+708 files in other folders)
