[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.7.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/superprotocol/arch-smell-detector"
authors = ["Super Protocol <support@superprotocol.com>"]

[workspace.dependencies]
# Core dependencies
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

# AST parsing
oxc_allocator = "0.48.0"
oxc_parser = "0.48.0"
oxc_ast = "0.48.0"
oxc_span = "0.48.0"
oxc_syntax = "0.48.0"

# Graph
petgraph = "0.6"

# Performance
rayon = "1.10"
rustc-hash = "2.1"
compact_str = { version = "0.8", features = ["serde"] }
smallvec = { version = "1.13", features = ["serde"] }
mimalloc = "0.1"
memchr = "2.7"

# File system
ignore = "0.4"
glob = "0.3"
notify = "6.1"

# Git
git2 = { version = "0.19", features = ["vendored-openssl"] }

# Misc
regex = "1.11"
inventory = "0.3"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
console = "0.15"
comfy-table = "7.1"
redb = "3.1.0"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }

# Dev
tempfile = "3.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
