[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.16.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/superprotocol/arch-smell-detector"
authors = ["Super Protocol <support@superprotocol.com>"]

[workspace.dependencies]
# Core dependencies
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
schemars = { version = "0.8", features = ["derive", "preserve_order"] }
thiserror = "1.0"
anyhow = "1.0"
strum = { version = "0.26", features = ["derive"] }
log = "0.4"
env_logger = "0.11"

# AST parsing
oxc_allocator = "0.108.0"
oxc_parser = "0.108.0"
oxc_ast = "0.108.0"
oxc_ast_visit = "0.108.0"
oxc_span = "0.108.0"
oxc_syntax = "0.108.0"

# Graph
petgraph = "0.6"

# Performance
rayon = "1.10"
rustc-hash = "2.1"
compact_str = { version = "0.8", features = ["serde"] }
smallvec = { version = "1.13", features = ["serde"] }
mimalloc = "0.1"
memchr = "2.7"

# File system
ignore = "0.4"
glob = "0.3"
notify = "6.1"

# Git
git2 = { version = "0.19", features = ["vendored-openssl"] }

# Misc
include_dir = "0.7"
regex = "1.11"
inventory = "0.3"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
console = "0.15"
comfy-table = "7.1"
cliclack = "0.3.7"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
redb = "3.1.0"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }

# Dev
tempfile = "3.2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
strip = true
panic = "abort"

[workspace.lints.clippy]
all = { level = "deny", priority = 10 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cognitive_complexity = { level = "warn" }
assigning_clones = "allow"
case_sensitive_file_extension_comparisons = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
default_trait_access = "allow"
float_cmp = "allow"
format_push_string = "allow"
implicit_hasher = "allow"
items_after_statements = "allow"
manual_let_else = "allow"
match_same_arms = "allow"
struct_excessive_bools = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
needless_collect = "allow"
needless_pass_by_value = "allow"
option_if_let_else = "allow"
or_fun_call = "allow"
trivially_copy_pass_by_ref = "allow"
unnecessary_debug_formatting = "allow"
unnecessary_wraps = "allow"
unused_self = "allow"
trailing_empty_array = "allow"
single_option_map = "allow"