[package]
name = "archlint-napi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Node.js bindings for archlint"

[lib]
crate-type = ["cdylib"]

[dependencies]
archlint = { path = "../archlint" }
napi = { version = "2", default-features = false, features = ["async", "serde-json", "napi4", "tokio_rt"] }
napi-derive = "2"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread"] }

[build-dependencies]
napi-build = "2"
