[package]
name = "archlint"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Fast, AST-based architecture smell detector for TypeScript/JavaScript"

[[bin]]
name = "archlint"
path = "src/main.rs"

[lib]
name = "archlint"
path = "src/lib.rs"

[dependencies]
clap.workspace = true
clap_complete.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
log.workspace = true
env_logger.workspace = true

oxc_allocator.workspace = true
oxc_parser.workspace = true
oxc_ast.workspace = true
oxc_span.workspace = true
oxc_syntax.workspace = true

petgraph.workspace = true
rayon.workspace = true
rustc-hash.workspace = true
compact_str.workspace = true
smallvec.workspace = true
mimalloc.workspace = true
memchr.workspace = true

ignore.workspace = true
glob.workspace = true
notify.workspace = true
git2.workspace = true

regex.workspace = true
inventory.workspace = true
sha2.workspace = true
chrono.workspace = true
indicatif.workspace = true
console.workspace = true
comfy-table.workspace = true

[dev-dependencies]
tempfile.workspace = true
