[package]
name = "archlint"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Fast, AST-based architecture smell detector for TypeScript/JavaScript"

[[bin]]
name = "archlint"
path = "src/main.rs"
required-features = ["cli"]

[lib]
name = "archlint"
path = "src/lib.rs"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:clap_complete", "dep:indicatif", "dep:console", "dep:comfy-table", "dep:cliclack"]

[dependencies]
clap = { workspace = true, optional = true }
clap_complete = { workspace = true, optional = true }
cliclack = { version = "0.3.7", optional = true }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
schemars.workspace = true
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true

oxc_allocator.workspace = true
oxc_parser.workspace = true
oxc_ast.workspace = true
oxc_span.workspace = true
oxc_syntax.workspace = true

petgraph.workspace = true
rayon.workspace = true
rustc-hash.workspace = true
compact_str.workspace = true
smallvec.workspace = true
mimalloc.workspace = true
memchr.workspace = true
include_dir.workspace = true

ignore.workspace = true
glob.workspace = true
notify.workspace = true
git2.workspace = true

regex.workspace = true
inventory.workspace = true
sha2.workspace = true
chrono.workspace = true
indicatif = { workspace = true, optional = true }
console = { workspace = true, optional = true }
comfy-table = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["blocking"] }
redb.workspace = true
bincode.workspace = true
json5 = "1.3.0"
archlint-macros = { path = "../archlint-macros" }
paste = "1.0.15"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile.workspace = true
